--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="app">
     <header>
        
-        <div class="logo">Student Tribe</div>
+        <div class="logo">Your Career Assistant</div>
         <div class="menu" onclick="toggleMenu()">☰</div>
         <nav id="navLinks">
           <a href="./events.html">Upcoming Events</a>
