--- a/internships.html
+++ b/internships.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Student Tribe</h1>
+    <h1>Your Career Assistant</h1>
     <nav class="menu">
       <a href="./index.html">Career Assistant</a>
       <a href="./events.html">Upcoming Events</a>
