--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
     const threadId = uuidv4();
     console.log("Generated UUID:", threadId);
   
-    // Use this UUID in your chatbot logic
-    window.threadId = threadId; // Set it globally so your main script can use it
+   
+    window.threadId = threadId; 
   </script>
   <script  src="./app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     
 </body>
 </html>
+
